Add Full Screen, Menu Navigation features
Also split into CSS & JS components

--- a/index.html
+++ b/index.html
@@ -1,1 +1,68 @@
-<h1> Free Code Camp Portfolio Page </h1>
+<!doctype html>
+
+<html lang="en">
+	<head>
+		<!-- Required meta tags -->
+		<meta charset="utf-8">
+		
+
+		<script type="text/javascript" src="project13.js" async></script>
+		<link rel="stylesheet" type="text/css" href="project13.css">
+
+		<title>FCC Portfolio Page</title>
+		
+	</head>
+
+
+	<body>
+		<!-- Full Screen Nav (may not need CSS Bootstrap) -->
+
+		<!-- hamburg icon for menu toggle button -->
+		<div id="nav-trigger" class="nav-trigger open">
+			<span class="line"></span>
+			<span class="line"></span>
+			<span class="line"></span>
+		</div>
+
+		<!-- navigation menu using html unordered list -->
+		<nav id="nav" class="out">
+			<ul>
+				<li><span class="nav-label">Home</span></li>
+				<li><span class="nav-label">About</span></li>
+				<li><span class="nav-label">Portfolio</span></li>
+				<li><span class="nav-label">Social</span></li>
+				<li><span class="nav-label">Contact</span></li>
+			</ul>
+		</nav>
+
+		<section id="header" class="header">
+			
+
+		  	<h1 id="heading">Fullscreen Toggle Menu</h1>
+		</section>
+
+
+		<div class="site-wrapper">
+			<!-- h1> Free Code Camp Portfolio Page </h1 -->
+				<div></div>
+				<div></div>
+		</div>
+		<!-- alternate place to store js -->
+
+		<!-- Bootstrap core JavaScript ========= Placed at end of document so pages load faster-->
+				<!-- Optional Javascript -->
+
+				
+				
+				<!-- Bootstrap JS still no need for JQeury popper.js-->
+
+				<!-- script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+
+				<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+
+				<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/js/bootstrap.min.js" integrity="sha384-a5N7Y/aK3qNeh15eJKGWxsqtnX/wWdSZSKp+81YjTmS15nvnvxKHuzaWwXHDli+4" crossorigin="anonymous"></script -->
+		
+	</body>
+</html>
+
+
