html divs + css new content section
changed color of nav:hover
changed color of navbar
create id site-wrapper, class for different sections

--- a/index.html
+++ b/index.html
@@ -38,14 +38,51 @@
 		<section id="header" class="header">
 			
 
-		  	<h1 id="heading">Fullscreen Toggle Menu</h1>
+		  	<h1 id="heading">Welcome.</h1>
 		</section>
 
 
-		<div class="site-wrapper">
+		<div id="site-wrapper">    <!-- class="site-wrapper" -->
 			<!-- h1> Free Code Camp Portfolio Page </h1 -->
-				<div></div>
-				<div></div>
+				<div class="about_section">
+					<h1 class="about">About</h1>
+
+
+
+				</div>
+				<div><h1 id="heading">Portfolio</h1></div>
+				<div><h1 id="heading">Social</h1></div>
+				<div><h1 id="heading">Contact</h1></div>
+				<div><h1 id="heading">Placeholder</h1></div>
+				<div><h1 id="heading">Placeholder</h1></div>
+				<div><h1 id="heading">Placeholder</h1></div>
+				<div><h1 id="heading">Placeholder</h1></div>
+				<div><h1 id="heading">Placeholder</h1></div>
+				<div><h1 id="heading">Placeholder</h1></div>
+				<div><h1 id="heading">Placeholder</h1></div>
+				<div><h1 id="heading">Placeholder</h1></div>
+				<div><h1 id="heading">Placeholder</h1></div>
+				<div><h1 id="heading">Placeholder</h1></div>
+				<div><h1 id="heading">Placeholder</h1></div>
+				<div><h1 id="heading">Placeholder</h1></div>
+				<div><h1 id="heading">Placeholder</h1></div>
+				<div><h1 id="heading">Placeholder</h1></div>
+				<div><h1 id="heading">Placeholder</h1></div>
+				<div><h1 id="heading">Placeholder</h1></div>
+				<div><h1 id="heading">Placeholder</h1></div>
+				<div><h1 id="heading">Placeholder</h1></div>
+				<div><h1 id="heading">Placeholder</h1></div>
+				<div><h1 id="heading">Placeholder</h1></div>
+				<div><h1 id="heading">Placeholder</h1></div>
+				<div><h1 id="heading">Placeholder</h1></div>
+				<div><h1 id="heading">Placeholder</h1></div>
+				<div><h1 id="heading">Placeholder</h1></div>
+				<div><h1 id="heading">Placeholder</h1></div>
+				<div><h1 id="heading">Placeholder</h1></div>
+				<div><h1 id="heading">Placeholder</h1></div>
+				<div><h1 id="heading">Placeholder</h1></div>
+				<div><h1 id="heading">Placeholder</h1></div>
+				<div><h1 id="heading">Placeholder</h1></div>
 		</div>
 		<!-- alternate place to store js -->
 
