add css styling to different sections of the page

--- a/index.html
+++ b/index.html
@@ -44,13 +44,41 @@
 
 		<div id="site-wrapper">    <!-- class="site-wrapper" -->
 			<!-- h1> Free Code Camp Portfolio Page </h1 -->
-				<div class="about_section">
+
+				<div id="about_section" onclick="aboutNav()">
 					<h1 class="about">About</h1>
+						<div class="about_text">
+							<p id="about"> 
+
+								Present
+								Independent Contractor: Organization Development / HR systems (surveys)
+								Content: https://medium.com/@paulapivat
 
 
+								Interests: Tech Skills (analytics, software), Emerging Technologies (Distributed Ledger Technologies, blockchain, crypto), People/Organizations and (soon) Distributed Organizations.
+							</p>
+						</div>
+				</div>
+
+				<div class="portfolio_section">
+					<h1 class="portfolio">Portfolio</h1>
+
+					<p> PLACEHOLDER: Present
+						Independent Contractor: Organization Development / HR systems (surveys)
+						Content: https://medium.com/@paulapivat
+
+
+						Past
+						Co-Founded LEARNx - oversaw people and operations. www.learnx.asia
+						Support Learn Corp and Learn Education: bit.ly/LearnEdLinkedIn 
+						Adjunct @ Global Studies and Social Entrepreneurship (GSSE) B.A. program at Thammasat University.
+						Maintain PhD Statement of Purpose Guidebook (sign-up here: phdpurpose.tumblr.com). 
+
+						Interests: Tech Skills (analytics, software), Emerging Technologies (Distributed Ledger Technologies, blockchain, crypto), People/Organizations and (soon) Distributed Organizations.
+					</p>
+					
 
 				</div>
-				<div><h1 id="heading">Portfolio</h1></div>
 				<div><h1 id="heading">Social</h1></div>
 				<div><h1 id="heading">Contact</h1></div>
 				<div><h1 id="heading">Placeholder</h1></div>
@@ -82,7 +110,12 @@
 				<div><h1 id="heading">Placeholder</h1></div>
 				<div><h1 id="heading">Placeholder</h1></div>
 				<div><h1 id="heading">Placeholder</h1></div>
-				<div><h1 id="heading">Placeholder</h1></div>
+
+				<div class="placeholder_section">
+					<h1 class="placeholder">Placeholder</h1>
+
+
+				</div>
 		</div>
 		<!-- alternate place to store js -->
 
