--- a/index.html
+++ b/index.html
@@ -28,10 +28,17 @@
 		<nav id="nav" class="out">
 			<ul>
 				<li><span class="nav-label">Home</span></li>
-				<li><span class="nav-label">About</span></li>
+				<li><span class="nav-label">About</span>
+					<a href="#about_section">About</a>      <!-- navigate to about_section -->
+				</li>
 				<li><span class="nav-label">Portfolio</span></li>
-				<li><span class="nav-label">Social</span></li>
-				<li><span class="nav-label">Contact</span></li>
+
+				<li><span class="nav-label">Social</span>
+					<a href="#social_section"> Social </a>  <!-- navigate to placeholder_section -->
+				</li>
+
+				<li><span class="nav-label">Placeholder</span></li>
+
 			</ul>
 		</nav>
 
@@ -45,20 +52,22 @@
 		<div id="site-wrapper">    <!-- class="site-wrapper" -->
 			<!-- h1> Free Code Camp Portfolio Page </h1 -->
 
-				<div id="about_section" onclick="aboutNav()">
-					<h1 class="about">About</h1>
-						<div class="about_text">
-							<p id="about"> 
+				<a name="about_section">
+						<div id="about_section" click="aboutNav()">
+							<h1 class="about">About</h1>
+								<div class="about_text">
+									<p id="about"> 
 
-								Present
-								Independent Contractor: Organization Development / HR systems (surveys)
-								Content: https://medium.com/@paulapivat
+										Present
+										Independent Contractor: Organization Development / HR systems (surveys)
+										Content: https://medium.com/@paulapivat
 
 
-								Interests: Tech Skills (analytics, software), Emerging Technologies (Distributed Ledger Technologies, blockchain, crypto), People/Organizations and (soon) Distributed Organizations.
-							</p>
+										Interests: Tech Skills (analytics, software), Emerging Technologies (Distributed Ledger Technologies, blockchain, crypto), People/Organizations and (soon) Distributed Organizations.
+									</p>
+								</div>
 						</div>
-				</div>
+				</a>
 
 				<div class="portfolio_section">
 					<h1 class="portfolio">Portfolio</h1>
@@ -79,7 +88,7 @@
 					
 
 				</div>
-				<div><h1 id="heading">Social</h1></div>
+				<div><h1 id="heading">Placeholder</h1></div>
 				<div><h1 id="heading">Contact</h1></div>
 				<div><h1 id="heading">Placeholder</h1></div>
 				<div><h1 id="heading">Placeholder</h1></div>
@@ -111,11 +120,11 @@
 				<div><h1 id="heading">Placeholder</h1></div>
 				<div><h1 id="heading">Placeholder</h1></div>
 
-				<div class="placeholder_section">
-					<h1 class="placeholder">Placeholder</h1>
-
-
-				</div>
+				<a name="social_section">
+						<div class="social_section">
+							<h1 class="social">Social</h1>
+						</div>
+				</a>
 		</div>
 		<!-- alternate place to store js -->
 
